<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.RefineScreenActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/strAvailabilityTitle"
            android:textColor="@color/bg_persian"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="12dp"


            >

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_availability"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/bg_persian" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/strStatusTitle"
            android:textColor="@color/bg_persian"
            android:textSize="18sp"
            android:textStyle="bold" />

<!--        <EditText-->
<!--            android:id="@+id/et_addStatus11"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp"-->
<!--            android:layout_margin="15dp"-->
<!--            android:background="@drawable/layout_round_corner"-->
<!--            android:maxLength="250"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/strAddStatusText"-->
<!--            android:textSize="16sp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="250"
            app:counterTextColor="@color/bg_persian"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeColor="#FFF"
            app:boxBackgroundColor="#FFF"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_addStatus"
                android:layout_width="match_parent"
                android:maxLength="250"
                android:layout_height="80dp"
                android:layout_margin="15dp"
                android:background="@drawable/layout_round_corner"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/strAddStatusText" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/strHyperDistanceTitle"
            android:textColor="@color/bg_persian"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/rs_hyperDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:value="50"
            android:stepSize="10.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"/>
<!--          -->
<!--            android:valueFrom="0.0"-->



          />

<RelativeLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:layout_marginTop="-15dp"
   >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strOneKm"
            android:layout_marginStart="20dp"

            android:textColor="@color/bg_persian"
            android:layout_alignParentStart="true"
            android:textSize="14sp"
            tools:ignore="ObsoleteLayoutParam" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str100Km"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/bg_persian"
            android:textSize="14sp"
            />
</RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/strPurposeTitle"
            android:textColor="@color/bg_persian"
            android:textSize="18sp"
            android:textStyle="bold" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="20dp"
    android:layout_marginTop="15dp">

     <Button
         android:id="@+id/btn_coffee"
         android:layout_width="90dp"
         android:layout_height="40dp"
         android:text="@string/strCoffee"
         android:textAlignment="center"
         android:gravity="center_vertical"
         android:textAllCaps="false"
         tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btn_business"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/strBusiness"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        style="@drawable/layout_textview_corner"
        android:textAllCaps="false"
        tools:ignore="RtlCompat" />
    <Button
        android:id="@+id/btn_hobbies"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:text="@string/strHobbies"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        style="@drawable/layout_textview_corner"
        android:textAllCaps="false"
        tools:ignore="RtlCompat" />
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btn_friendship"
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:text="@string/strFriendship"
                android:textAlignment="center"
                android:gravity="center_vertical"
                style="@drawable/layout_textview_corner"
                android:textAllCaps="false"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btn_movies"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/strMovies"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                style="@drawable/layout_textview_corner"
                android:textAllCaps="false"
                tools:ignore="RtlCompat" />
            <Button
                android:id="@+id/btn_dinning"
                android:layout_width="95dp"
                android:layout_height="40dp"
                android:text="@string/strDinning"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                style="@drawable/layout_textview_corner"
                android:textAllCaps="false"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btn_dating"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/strDating"
                android:textAlignment="center"
                android:gravity="center_vertical"
                style="@drawable/layout_textview_corner"
                android:textAllCaps="false"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btn_matrimony"
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:text="@string/strMatrimony"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                style="@drawable/layout_textview_corner"
                android:textAllCaps="false"
                tools:ignore="RtlCompat" />

        </LinearLayout>


    <Button
        android:id="@+id/btn_saveExplore"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/strSaveExplore"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_textview_corner"
        android:textAllCaps="false"
        tools:ignore="RtlCompat" />



    </LinearLayout>

</ScrollView>